# sdk-examples

./: README.md
Code Interpreter with Claude/: pyproject.toml  readme.md  server.py
ai-github-summarizer/: .env.example  pyproject.toml  readme.md
ai-github-summarizer/src/: main.py  utils.py
claude-code-interpreter/: pyproject.toml  readme.md
claude-code-interpreter/src/daytona_mcp_interpreter/: server.py  test.py
openai-evals-ai-evaluator/: .env.example  README.md  pyproject.toml  requirements.txt
openai-evals-ai-evaluator/samples/: word_ladder.py
openai-evals-ai-evaluator/src/: main.py
smolagents-code-commenter/: .env.example  README.md  readme.md  requirements.txt
smolagents-code-commenter/src/: code_commenter.py  code_commenting_agent.py  code_runner.py  code_tester.py  main.py
smolagents-code-commenter/src/samples/: algorithms.py
smolagents-code-tester/: .env.example  README.md  pyproject.toml
smolagents-code-tester/samples/: tree_node.py
smolagents-code-tester/src/: main.py
