[project]
name = "ai-github-pr-summarizer"
version = "0.1.0"
description = "A comprehensive code analyzer and repository summarizer using Daytona workspaces"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.10.2",
    "python-dotenv>=1.0.1",
    "httpx>=0.24.0",
    "daytona-sdk==0.10.2",
    "api-client>=1.3.1",
    "pydantic-ai>=0.0.42",
    "openai>=1.67.0",
]
