[project]
name = "ai-evaluator"
version = "0.1.0"
description = "An AI evaluator that takes a sample function from the user, generates different versions using AI, runs each version in a separate Daytona workspace, compares results, and selects the best function based on outcomes."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "daytona-sdk==0.10.2",
    "python-dotenv>=1.0.1",
    "openai>=1.63.2",
    "asyncio",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
